--- a/contacto.html
+++ b/contacto.html
@@ -5,14 +5,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"> -->
+        <link rel="stylesheet" href="css/animations.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <header>
             <div class="container-fluid franja-address"><!-- Contenedor de dirección-->
-                <address class="container"><!--contenedor direccion-->
+                <address class="container animatedParent"><!--contenedor direccion-->
                     <div class="row justify-content-end align-items-center animated bounceInLeft delay-10s"><!--fila direccion-->
                         <span></span>
                         <a ><span class="fas fa-mobile-alt"></span> +507 6490-9548 <span class="fas fa-phone"></span> +507 958-5427</a>
@@ -58,7 +59,7 @@
             </div><!--Fin contenedor de logo y menu-->
         </header>
 
-        <main class="container mb-5 p-4">
+        <main class="container mb-4 p-4 animatedParent">
             <div class="row mb-5">
                 <div class="col-md-6 mb-4 mb-md-0">
                     <h2 class="text-center my-5 text-uppercase display-5 contacto">Contáctanos</h2>
@@ -173,7 +174,7 @@
                     </div><!--fin container-->
                 </div><!--fin col-md-6-->
             </div><!--fin row-->
-            <div class="row justify-content-center">
+            <div class="row justify-content-center mt-5 animated rollIn">
                 <h3 class="maps mb-4 justify-content-left">Abrir mapa en Google Maps</h3>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.0166787630283!2d-80.96615034940599!3d8.09978070504963!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fae723fee162b71%3A0xdd2b8708a8b40dab!2sA%26M+Graphics+Santiago!5e0!3m2!1ses-419!2spa!4v1541871903594" width="1300" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
@@ -206,6 +207,7 @@
 
 
         <script src="js/jquery.js"></script>
+        <script src="js/css3-animate-it.js"></script>
         <script src="js/popper.js"></script>
         <script src="js/bootstrap.js"></script>
     </body>
