--- a/post.html
+++ b/post.html
@@ -5,14 +5,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"> -->
+        <link rel="stylesheet" href="css/animations.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <header>
             <div class="container-fluid franja-address"><!-- Contenedor de dirección-->
-                <address class="container"><!--contenedor direccion-->
+                <address class="container animatedParent"><!--contenedor direccion-->
                     <div class="row justify-content-end align-items-center animated bounceInLeft delay-10s"><!--fila direccion-->
                         <span></span>
                         <a ><span class="fas fa-mobile-alt"></span> +507 6490-9548 <span class="fas fa-phone"></span> +507 958-5427</a>
@@ -100,6 +101,7 @@
 
 
         <script src="js/jquery.js"></script>
+        <script src="js/css3-animate-it.js"></script>
         <script src="js/popper.js"></script>
         <script src="js/bootstrap.js"></script>
     </body>
